# cookiecutter-ewjoachim-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/: CODEOWNERS
{{cookiecutter.project_slug}}/.github/workflows/: release-drafter.yml
{{cookiecutter.project_slug}}/docs/: conf.py  discussions.rst  index.rst  quickstart.rst  reference.rst
{{cookiecutter.project_slug}}/docs/howto/: example.rst
{{cookiecutter.project_slug}}/tests/integration/: test_cli.py
{{cookiecutter.project_slug}}/tests/unit/: __init__.py  test_cli.py  test_main.py  test_utils.py
{{cookiecutter.project_slug}}/{{ccokiecutter.package_name}}/: __init__.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  exceptions.py  metadata.py
